<resources>
    <string name="app_name">MY APP</string>

    <!-- Strings related to login -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="otp">OTP</string>
    <string name="error_invalid_mobile">Mobile number is invalid</string>
    <string name="error_invalid_name">Only characters[a-z] are allowed</string>
    <string name="error_field_required">This field is required</string>

    <string name="button_log_in">Log in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_submit">Submit</string>
    <string name="button_back">Back</string>
    <string name="button_next">Next</string>
    <string name="button_resend_otp">Resend OTP</string>

    <string name="prev">&lt;&lt;</string>
    <string name="next">&gt;&gt;</string>

    <string name="main_page_intro">Seems like you are late to the Party!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">MapActivity</string>
</resources>
